@@ -1,3 +1,10 @@
+2010-04-21  Vincent Torri  <doursse at users dot sf dot net>
+
+	* configure.ac:
+	* src/bin/Makefile.am:
+	remove ecore dependency in the library and add it to the
+	binaries
+
 2009-11-19  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/Makefile.am:
